--- a/assets/cssIntegration.scss
+++ b/assets/cssIntegration.scss
@@ -1,13 +1,18 @@
 $textCenter :center;
-$paddind5 : 5% ;
+$padding5 : 5% ;
 $margin8 : 8%;  
 $sizeImgHeight :90px ; 
 $sizeImgWidth :80px; 
 $positionImg :relative;
-$positionLeftImg :30%;   
+$positionLeftImg :30%;  
+$colorH3 :green; 
 
 h1{
     text-align: $textCenter;
+}
+
+h3{
+    color: $colorH3;
 }
 
 
@@ -15,13 +20,12 @@ h1{
 .contenaire{
     display: grid;
     grid-template-columns: repeat(4, 25%);
-    grid-template-rows: repeat(5, 20%);
     margin-left:25px;
     margin-right:50px;
     padding: 10px;
     grid-gap: 10px;
-    .item1{
-        padding: $paddind5;
+    .item{
+        padding: $padding5;
         img{
             height:$sizeImgHeight;
             width: $sizeImgWidth;  
@@ -29,9 +33,9 @@ h1{
             left: $positionLeftImg;  
         }
     }
-    
+    /**
     .item2{
-        padding: $paddind5 ;
+        padding: $padding5 ;
         img{
             height:$sizeImgHeight;
             width: $sizeImgWidth;
@@ -42,7 +46,7 @@ h1{
     
     
     .item3{
-        padding: $paddind5 ;
+        padding: $padding5 ;
         img{
             height:$sizeImgHeight;
             width: $sizeImgWidth;
@@ -52,7 +56,7 @@ h1{
     }
     
     .item4{
-        padding: $paddind5;
+        padding: $padding5;
         img{
             height:$sizeImgHeight;
             width: $sizeImgWidth;
@@ -60,30 +64,38 @@ h1{
             left: $positionLeftImg; 
         } 
     }
+    */
 }
 
 
 
 @media screen and (max-width: 768px){
-    .item1{
+    .item{
         grid-column: 1/4;
     }
 
-    .item2{
+    /** .item2{
         grid-row: 2/3;
-        /*width: 200%;*/
-        grid-column: 1/4;
-    }
-
+        width: 200%; grid-column: 1/4;
+        
+    } 
+    */
+    
+    /*
     .item3{
         grid-row: 3/4;
-        /*width: 200%;*/
+        width: 200%;
         grid-column: 1/4;
     }
+    */
 
+    /*
     .item4{
         grid-row: 4/5;
         grid-column: 1/4;
-       /*width: 200%;*/
+       width: 200%;
     }
+    */
 }
+
+/**Interface 2**/
