--- a/assets/style.css
+++ b/assets/style.css
@@ -61,6 +61,16 @@ h3 {
     grid-column: 1/4;
   }
 
+  .contenaire {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .contenaire .item img {
+    position: relative;
+    left: 0;
+  }
+
   /** .item2{
       grid-row: 2/3;
       width: 200%; grid-column: 1/4;
@@ -83,5 +93,9 @@ h3 {
   */
 }
 /**Interface 2**/
+.card {
+  position: relative;
+  left: 40%;
+}
 
 /*# sourceMappingURL=style.css.map */
