--- a/assets/cssIntegration.scss
+++ b/assets/cssIntegration.scss
@@ -113,5 +113,28 @@ h3{
 /**Interface 2**/
 .card{
     position: relative;
-    left: 40%;
+    left: 29%;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 3%;
+    .interface2H1{
+        text-align: left;
+    }
+
+    img{
+        position: relative;
+        left: 1%;
+    }
+
+    .userAndNumber{
+        position: relative;
+        left: 37%;
+    }
+
+    .topActive{
+        position: relative;
+        left: 0;
+    }
+    
 }
+
