--- a/assets/cssIntegration.scss
+++ b/assets/cssIntegration.scss
@@ -123,7 +123,7 @@ h3{
 
     img{
         position: relative;
-        left: 1%;
+        right: 4%;
     }
 
     table th {
@@ -145,5 +145,32 @@ h3{
         position: relative;
         left: 0;
     }    
+}
+
+@media screen and (max-width: 768px){
+    table th {
+        position: relative;
+        right:10%;
+    }
+
+    table td {
+        position: relative;
+        right:10%;
+    }
+
+    .userAndNumber{
+        position: relative;
+        left: 23%;
+    }
+    
+    .topActive{
+        position: relative;
+        left: 0;
+    } 
+    
+    .card{
+        position: relative;
+        left: 10%;
+    }
 }
 
